Fix T41875: Update issue in Timeline space

This space did not refresh on NC_OBJECT, ND_BONE_SELECT notifier...